feat(apps): Add basic app creation
