# openapi/openapi.yaml
@@ -188,6 +188,45 @@ paths:
           description: Team not found
         "401":
           description: Unauthorized
+    post:
+      summary: Create an app
+      tags:
+        - Apps
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                slug:
+                  type: string
+              required:
+                - slug
+              example:
+                slug: dinopoll
+      parameters:
+        - in: path
+          name: slug
+          schema:
+            type: string
+          required: true
+          example: hack-as-a-service
+      responses:
+        "200":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/App"
+        "500":
+          description: Internal server error
+        "404":
+          description: Team not found
+        "401":
+          description: Unauthorized
+        "409":
+          description: Conflict
 
 components:
   securitySchemes:
