# src/models/app.rs
@@ -1,7 +1,7 @@
 use super::team::Team;
 use crate::schema::apps;
 use chrono::NaiveDateTime;
-use serde::Serialize;
+use serde::{Deserialize, Serialize};
 
 #[derive(Debug, Queryable, Serialize, Identifiable, Associations)]
 #[belongs_to(Team)]
@@ -13,4 +13,12 @@ pub struct App {
     enabled: bool,
     #[serde(skip_serializing)]
     container_id: Option<String>,
+}
+
+#[derive(Insertable, Deserialize, Debug)]
+#[table_name = "apps"]
+pub struct NewApp {
+    pub slug: String,
+    #[serde(skip_deserializing)]
+    pub team_id: i32,
 }
